# CogmAIt

source_code_agent/: .coverage  .env  .env.example  .gitignore  README.md  config.json.example  docker-compose.yml  mcp_services.py  pyproject.toml  pytest.ini  requirements.txt  run.py
source_code_agent/app/: __init__.py  main.py
source_code_agent/app/config/: settings.py
source_code_agent/app/core/: config.py  minio_client.py
source_code_agent/app/db/: __init__.py  base.py  init_db.py  session.py
source_code_agent/app/domain/: __init__.py  knowledge_chunk.py  memory.py  session_context.py
source_code_agent/app/models/: __init__.py  agent.py  datasource.py  extraction_task.py  file.py  graph.py  graph_file.py  knowledge.py  mcp.py  model.py  user.py
source_code_agent/app/providers/: __init__.py  anthropic_provider.py  base.py  custom_provider.py  deepseek_provider.py  google_provider.py  local_provider.py  manager.py  ollama_provider.py  openai_provider.py
source_code_agent/app/routes/: agent.py
source_code_agent/app/schemas/: __init__.py  agent.py  datasource.py  file.py  graph.py  knowledge.py  mcp.py  model.py  user.py
source_code_agent/app/services/: agent_service.py  chat_orchestration_service.py  strategy_base.py
source_code_agent/app/utils/: __init__.py  agent.py  agent_utils.py  ai_sql_assistant.py  chunker.py  config.py  deps.py  embedding.py  file_processor.py  graph.py  knowledge.py  mcp.py  (+9 more)
source_code_agent/scripts/: bootstrap.ps1  openai_compat_mock.py  start-dev.ps1  stop-dev.ps1
source_code_agent/tests/: conftest.py  test_mcp_services_env.py  test_run_config_loader.py
(+34 files in other folders)
