[project]

name = "cogmait"
version = "0.1.0"
description = "CogmAIt AI智能体管理平台后端"
readme = "README.md"
license = "MIT"
authors = [{ name = "floraxe", email = "floraxe@qq.com" }]
requires-python = ">=3.11,<3.15"
dynamic = ["dependencies"]

[tool.poetry.dependencies]
python = ">=3.11,<3.15"
fastapi = "^0.135.2"
uvicorn = {extras = ["standard"], version = "^0.44.0"}
pydantic = "^2.12.5"
python-multipart = "^0.0.22"
starlette = "^1.0.0"
httpx = "^0.28.1"
sse-starlette = "^3.3.4"
sqlalchemy = "^2.0.48"
pymysql = "^1.1.2"
mysql-connector-python = "^9.6.0"
python-jose = {extras = ["cryptography"], version = "^3.5.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
email-validator = "^2.3.0"
aiohttp = "^3.13.4"
aiofiles = "^25.1.0"
python-dotenv = "^1.2.2"
pyyaml = "^6.0.3"
loguru = "^0.7.3"
anthropic = "^0.86.0"
google-generativeai = "^0.8.6"
neo4j = "^6.1.0"
neo4j-graphrag = "^1.14.1"
langchain-text-splitters = "^1.1.1"
pandas = "^3.0.1"
numpy = "^2.4.4"
pypdf2 = "^3.0.1"
minio = "^7.2.20"
asyncpg = "^0.31.0"
aiomysql = "^0.3.2"
fastmcp = "^3.2.0"
tavily-python = "^0.7.23"
pinecone = "^8.1.0"
openai = "^2.30.0"
watchdog = "^6.0.0"
modelscope = "^1.35.3"
bcrypt = "4.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.2"
pytest-asyncio = "^1.3.0"
pytest-cov = "^7.1.0"
radon = "^6.0.1"


[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
